fixed navbar spacing and styled some of the new listing form to match wireframe

--- a/src/index.css
+++ b/src/index.css
@@ -17,3 +17,19 @@ code {
   height:50px;
   width:60px;
 }
+
+.myTextArea
+{
+  border: solid thin lightgray;
+}
+
+.myInput
+{
+  width: 469px;
+  margin-bottom: 10px;
+  margin-top: 25px;
+}
+
+h1{
+  margin-top: 80px;
+}
